--- a/createDev.html
+++ b/createDev.html
@@ -50,6 +50,7 @@
                             <input type="text" id="lname" placeholder="Please enter last name" required>                            
                             <label for="pro">Project</label>
                             <select id="pro" placeholder="Please choose project">
+                                <option value="" disabled selected hidden>Choose project</option>
                                 <option value="Project1">Project1</option>
                                 <option value="Project2">Project1</option>
                                 <option value="Project3">Project3</option>
