--- a/createPro.html
+++ b/createPro.html
@@ -50,6 +50,7 @@
                         </div>
                         <label for="dev">Developer</label>
                         <select id="dev" placeholder="Please choose dev">
+                            <option value="" disabled selected hidden>Choose developer</option>
                             <option value="Ryy">Ryy</option>
                             <option value="Jen">Jen</option>
                             <option value="NhoRyy">Nhory</option>
