--- a/updatePro.html
+++ b/updatePro.html
@@ -49,7 +49,8 @@
                             <input type="date" id="description">
                         </div>
                         <label for="dev">Developer</label>
-                        <select id="dev" placeholder="Please choose dev">
+                        <select id="dev">
+                            <option value="" disabled selected hidden>Choose developer</option>
                             <option value="Ryy">Ryy</option>
                             <option value="Jen">Jen</option>
                             <option value="NhoRyy">Nhory</option>
@@ -57,7 +58,7 @@
                         </select>
                         <label for="description">Description</label>
                         <textarea id="description" cols="30" rows="10" placeholder="Please enter description"></textarea>
-                        <button class="create"><a href="#">Create</a></button>
+                        <button class="create"><a href="#">Update</a></button>
                     </form>
                 </div>
             </div>
