--- a/updateDev.html
+++ b/updateDev.html
@@ -50,6 +50,7 @@
                             <input type="text" id="lname" placeholder="Please enter last name" required>                            
                             <label for="pro">Project</label>
                             <select id="pro" placeholder="Please choose project">
+                                <option value="" disabled selected hidden>Choose project</option>
                                 <option value="Project1">Project1</option>
                                 <option value="Project2">Project1</option>
                                 <option value="Project3">Project3</option>
@@ -57,7 +58,7 @@
                             </select>
                             <label for="about">About Dev</label>
                             <textarea id="about" cols="20" rows="7" placeholder="Please enter some secrets"></textarea>
-                            <button class="create"><a href="#">Create</a></button>
+                            <button class="create"><a href="#">Update</a></button>
                         </form>
                     </div>
                 </div>
