--- a/showDev.html
+++ b/showDev.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developers - JenRyy</title>
+    <title>Developers - JenGyy</title>
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://kit.fontawesome.com/10053f200c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="main">
         <div id="header">
-            <h1>JenRyy</h1>
+            <h1>JenGyy</h1>
             <div class="nav">
                 <ul>
                     <li><a href="index.html">Project</a></li>
@@ -35,7 +35,7 @@
             </div>
             <div class="listDev">
                 <ul id="grid">
-                    <li></li>
+                    <li><p class="info">Đặng Lê Thiên Thanh</p></li>
                     <li></li>
                     <li></li>
                     <li></li>
