--- a/updatePro.html
+++ b/updatePro.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update project - JenRyy</title>
+    <title>Update project - JenGyy</title>
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://kit.fontawesome.com/10053f200c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="main">
         <div id="header">
-            <h1>JenRyy</h1>
+            <h1>JenGyy</h1>
             <div class="nav">
                 <ul>
                     <li><a href="index.html">Project</a></li>
