--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Project - JenGyy</title>
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://kit.fontawesome.com/10053f200c.js" crossorigin="anonymous"></script>
+    <script language="javascript" src="pagination.js"></script>
 </head>
 <body>
     <div id="main">
@@ -274,5 +275,7 @@
             </div>
         </div>
     </div>
+    <!-- phan trang -->
+    
 </body>
 </html>
