--- a/showDev.html
+++ b/showDev.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://kit.fontawesome.com/10053f200c.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body>  
     <div id="main">
         <div id="header">
             <h1>JenGyy</h1>
@@ -17,7 +17,12 @@
                     <li><a href="index.html">Project</a></li>
                     <li><a href="showDev.html">Developer</a></li>
                     <li><a href="#">Dashboard</a></li>
-                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li>
+                        <form class="search-container">
+                            <input id="search-box" type="text" class="search-box" name="search"/>
+                            <input type="submit" id="search-submit" />
+                        </form>
+                    </li>
                     <li><i class="fa-solid fa-user"></i></li>
                 </ul>
             </div>
@@ -44,5 +49,22 @@
                     <li></li>
                     <li></li>
                     <li></li>
+
                 </ul>
             </div>
+            <div class="container">
+            <div class="pagination">
+                <ul>
+                    <a class="is-active" href="#"><li>1</li></a>
+                    <a href="#"><li>2</li></a>
+                    <a href="#"><li>3</li></a>
+                    <a href="#"><li>4</li></a>
+                    <a href="#"><li>5</li></a>
+                    <a href="#"><li>6</li></a>
+                </ul>
+            </div>
+            </div>
+        </div>
+        </div>
+        </div>
+</body>
