--- a/updatePro.html
+++ b/updatePro.html
@@ -17,7 +17,12 @@
                     <li><a href="index.html">Project</a></li>
                     <li><a href="showDev.html">Developer</a></li>
                     <li><a href="#">Dashboard</a></li>
-                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li>
+                        <form class="search-container">
+                            <input id="search-box" type="text" class="search-box" name="search"/>
+                            <input type="submit" id="search-submit" />
+                        </form>
+                    </li>
                     <li><i class="fa-solid fa-user"></i></li>
                 </ul>
             </div>
