--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Project - JenGyy</title>
-        <link rel="stylesheet" href="assets\css\style.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
         <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/simplePagination.min.css">
@@ -14,7 +14,7 @@
             <div id="main">
                 <!-- navbar -->
                 <div id="header">
-                    <h1>JenGyy</h1>
+                    <h1><a href="index.html">JenGyy</a></h1>
                     <div class="nav">
                         <ul>
                             <li><a href="index.html">Project</a></li>
@@ -42,37 +42,35 @@
                         <h3>-</h3>
                     </div>
                     <div class="title">
-                        <h1>Project</h1>
-                        <button class="newProject">
-                            <a href="createPro.html">New Project</a>
-                        </button>
-                        <button class="newDev">
-                            <a href="createDev.html">New Developer</a>
-                        </button>
-                        <button class="bu-filter" onclick="myFunction()">
-                            <a href="#">Filter</a>
-                        </button>
-
-                        <!-- filter -->
-                        <div class="filter">
-                            <div class="large-6 columns">
-                                <label for="start">Start Date</label>
-                                <input id="inputStartDate" type="date" /><br/>
-                            </div>
-                            <div class="large-6 columns">
-                                <label for="end">End Date</label>
-                                <input id="inputEndDate" type="date" /><br />
-                            </div>
-                            <div class="large-12 columns">
-                                <button class="button radius" id="filter" onclick="filterDay()">Filter</button>
-                                <button id="clearFilter" class="button radius secondary">
-                                    Clear Filter
-                                </button>
+                        <div class="left-column-70">
+                            <h1>Project</h1>
+                            <button class="newProject">
+                                <a href="createPro.html">New Project</a>
+                            </button>
+                            <button class="newDev">
+                                <a href="createDev.html">New Developer</a>
+                            </button>
+                        </div>
+                        <div class="right-column-30">
+                                <div class="large-6 columns">
+                                    <label for="start">Start Date</label>
+                                    <input id="inputStartDate" type="date" /><br/>
+                                </div>
+                                <div class="large-6 columns">
+                                    <label for="end">End Date</label>
+                                    <input id="inputEndDate" type="date" /><br />
+                                </div>
+                                <div class="large-12 columns">
+                                    <button class="button radius" id="filter" onclick="filterDay()">Filter</button>
+                                    <button id="clearFilter" class="button radius secondary">
+                                        Clear Filter
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- table --> 
-                    <table id="example" class="display" data-page-length="10" data-order="[[ 1, &quot;asc&quot; ]]">
+                    <table id="example" class="display" data-page-length="8" data-order="[[ 1, &quot;asc&quot; ]]">
                         <thead>
                             <tr>
                                 <th class="text-left">ID</th>
@@ -87,7 +85,7 @@
                         <tbody class="table-hover">
                             <tr>
                                 <td class="text-left">01</td>
-                                <td class="text-left"><a href="updatePro.html">Vi Xuan 1</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Vi Xuan 1</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">23/03/2021</td>
                                 <td class="text-left">25/04/2022</td>
@@ -104,7 +102,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">02</td>
-                                <td class="text-left"><a href="updatePro.html">Vi Xuan 2</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Vi Xuan 2</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">10/08/2021</td>
                                 <td class="text-left">12/09/2022</td>
@@ -121,7 +119,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">03</td>
-                                <td class="text-left"><a href="updatePro.html">ISE Race</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">ISE Race</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">16/01/2021</td>
                                 <td class="text-left">18/02/2022</td>
@@ -138,7 +136,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">04</td>
-                                <td class="text-left"><a href="updatePro.html">ISE Toeic Test</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">ISE Toeic Test</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">25/05/2021</td>
                                 <td class="text-left">27/06/2022</td>
@@ -155,7 +153,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">05</td>
-                                <td class="text-left"><a href="updatePro.html">ISE Skool Cup</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">ISE Skool Cup</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">16/04/2021</td>
                                 <td class="text-left">18/05/2022</td>
@@ -172,7 +170,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">06</td>
-                                <td class="text-left"><a href="updatePro.html">IT War</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">IT War</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">03/08/2021</td>
                                 <td class="text-left">04/02/2022</td>
@@ -189,7 +187,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">07</td>
-                                <td class="text-left"><a href="updatePro.html">Kibou ISE K15</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Kibou ISE K15</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">11/06/2021</td>
                                 <td class="text-left">13/07/2022</td>
@@ -206,7 +204,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">08</td>
-                                <td class="text-left"><a href="updatePro.html">Tim</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Tim</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">10/03/2021</td>
                                 <td class="text-left">12/04/2022</td>
@@ -223,7 +221,7 @@
                                 </tr>
                                 <tr>
                                 <td class="text-left">09</td>
-                                <td class="text-left"><a href="updatePro.html">MGM</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">MGM</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">04/08/2021</td>
                                 <td class="text-left">03/02/2022</td>
@@ -240,7 +238,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">10</td>
-                                <td class="text-left"><a href="updatePro.html">Cua vao ISE</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Cua vao ISE</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">24/07/2021</td>
                                 <td class="text-left">26/08/2022</td>
@@ -257,7 +255,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">11</td>
-                                <td class="text-left"><a href="updatePro.html">Mam thong yeu thuong</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Mam thong yeu thuong</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">24/12/2021</td>
                                 <td class="text-left">26/01/2022</td>
@@ -274,7 +272,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">12</td>
-                                <td class="text-left"><a href="updatePro.html">Konichiwa ISE K14</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">Konichiwa ISE K14</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">01/08/2021</td>
                                 <td class="text-left">01/02/2022</td>
@@ -291,7 +289,7 @@
                             </tr>
                             <tr>
                                 <td class="text-left">13</td>
-                                <td class="text-left"><a href="updatePro.html">TruyVan</a></td>
+                                <td id="name" class="text-left"><a href="updatePro.html">TruyVan</a></td>
                                 <td class="text-left">Unless the context is clear ...</td>
                                 <td class="text-left">03/08/2021</td>
                                 <td class="text-left">04/02/2022</td>
@@ -310,11 +308,12 @@
                     </table>
                 </div>
             </div>
-            <script type="text/javascript" src="assets\js\jquery-3.3.1.min.js"></script>
-            <script type="text/javascript" src="assets\js\script.js"></script>
+            <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
+            <script type="text/javascript" src="assets/js/script.js"></script>
             <script src="https://kit.fontawesome.com/10053f200c.js" crossorigin="anonymous"></script>
-            <script type="text/javascript" src="lib\bootstrap\js\bootstrap.min.js"></script>
+            <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
             <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.min.js"></script>
+            <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
         </body>
     </html>
