--- a/showDev.html
+++ b/showDev.html
@@ -11,7 +11,7 @@
 <body>  
     <div id="main">
         <div id="header">
-            <h1>JenGyy</h1>
+            <h1><a href="index.html">JenGyy</a></h1>
             <div class="nav">
                 <ul>
                     <li><a href="index.html">Project</a></li>
