fix search projectname

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                                     type="text"
                                     class="search-box"
                                     name="search"
+                                    onkeyup="searchFunction()"
                                     />
-                                    <input type="submit" id="search-submit" onkeyup = "searchFunction()"/>
+                                    <input type="submit" id="search-submit" />
                                 </form>
                             </li>
                             <li><i class="fa-solid fa-user"></i></li>
