--- a/showDev.html
+++ b/showDev.html
@@ -30,7 +30,7 @@
             
         <div id="content">  
             <div class="table-title">
-                <h3>Data Table</h3>
+                <h3>-</h3>
                 <h3>-</h3> 
             </div>
             <div class="title">
@@ -38,33 +38,12 @@
                 <button class="newProject"><a href="createPro.html">New Project</a></button>
                 <button class="newDev"><a href="createDev.html">New Developer</a></button>
             </div>
-            <div class="listDev">
-                <ul id="grid">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
 
-                </ul>
-            </div>
-            <div class="container">
-            <div class="pagination">
-                <ul>
-                    <a class="is-active" href="#"><li>1</li></a>
-                    <a href="#"><li>2</li></a>
-                    <a href="#"><li>3</li></a>
-                    <a href="#"><li>4</li></a>
-                    <a href="#"><li>5</li></a>
-                    <a href="#"><li>6</li></a>
-                </ul>
-            </div>
-            </div>
+            
+
+
         </div>
         </div>
         </div>
 </body>
+</html>
